Implement Chapter 10 Bronze Challenge 1
Had to upadte the simulator to show the keyboard.
Updating the xib was easy.

--- a/ch11-Camera/Homepwner/Homepwner/BNRDetailViewController.xib
+++ b/ch11-Camera/Homepwner/Homepwner/BNRDetailViewController.xib
@@ -55,7 +55,7 @@
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YRv-Cz-etR">
                     <rect key="frame" x="100" y="160" width="492" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="TXR-V1-jah"/>
                     </connections>
