--- a/ch11-Camera/Homepwner/Homepwner/BNRDetailViewController.xib
+++ b/ch11-Camera/Homepwner/Homepwner/BNRDetailViewController.xib
@@ -16,7 +16,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="UIControl">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -129,7 +129,10 @@
                     <exclude reference="VXv-bM-dEa"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="345" y="386"/>
+            <connections>
+                <action selector="backgroundTapped:" destination="-1" eventType="touchUpInside" id="NE3-KO-IGJ"/>
+            </connections>
+            <point key="canvasLocation" x="402" y="427"/>
         </view>
     </objects>
 </document>
