--- a/ch17-Autorotation_Popover_Controllers_and_Modal_View_Controllers/Homepwner/Homepwner/BNRDetailViewController.xib
+++ b/ch17-Autorotation_Popover_Controllers_and_Modal_View_Controllers/Homepwner/Homepwner/BNRDetailViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BNRDetailViewController">
             <connections>
+                <outlet property="cameraButton" destination="PP4-3D-LHX" id="eLH-mO-HEq"/>
                 <outlet property="dateLabel" destination="u7O-94-OGk" id="oyB-d6-p8n"/>
                 <outlet property="nameField" destination="4BT-dT-NHN" id="cJu-xP-dRh"/>
                 <outlet property="serialNumberField" destination="UXP-xj-6sX" id="5el-Fp-sot"/>
