--- a/ch19-Subclassing_UITableViewCell/Homepwner/Homepwner/BNRItemCell.xib
+++ b/ch19-Subclassing_UITableViewCell/Homepwner/Homepwner/BNRItemCell.xib
@@ -2,38 +2,62 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bET-3u-BU5" customClass="BNRItemCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bET-3u-BU5" id="Rgh-rL-YaB">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eEX-1V-yim">
-                        <rect key="frame" x="0.0" y="0.0" width="60" height="43.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eEX-1V-yim">
+                        <rect key="frame" x="8" y="10" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="h47-1I-kDs"/>
+                            <constraint firstAttribute="height" constant="40" id="qu6-so-zuP"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XET-Wn-aMN">
-                        <rect key="frame" x="68" y="3" width="188" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XET-Wn-aMN">
+                        <rect key="frame" x="56" y="8" width="206" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="8Wg-Yx-jyK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qwb-zI-JEj">
-                        <rect key="frame" x="264" y="11" width="48" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNZ-B5-8xO">
-                        <rect key="frame" x="68" y="22" width="188" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNZ-B5-8xO">
+                        <rect key="frame" x="56" y="41" width="206" height="10"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="fba-DV-oPj"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.40000000596046448" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qwb-zI-JEj">
+                        <rect key="frame" x="270" y="19" width="42" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="hNZ-B5-8xO" firstAttribute="leading" secondItem="eEX-1V-yim" secondAttribute="trailing" constant="8" id="0pr-Cu-7qn"/>
+                    <constraint firstItem="qwb-zI-JEj" firstAttribute="leading" secondItem="XET-Wn-aMN" secondAttribute="trailing" constant="8" id="0yF-eW-5tR"/>
+                    <constraint firstItem="XET-Wn-aMN" firstAttribute="top" secondItem="Rgh-rL-YaB" secondAttribute="topMargin" id="3C2-El-181"/>
+                    <constraint firstItem="XET-Wn-aMN" firstAttribute="leading" secondItem="eEX-1V-yim" secondAttribute="trailing" constant="8" id="6Vv-66-zB4"/>
+                    <constraint firstItem="hNZ-B5-8xO" firstAttribute="top" relation="greaterThanOrEqual" secondItem="XET-Wn-aMN" secondAttribute="bottom" constant="5" id="8PA-dk-fma"/>
+                    <constraint firstItem="qwb-zI-JEj" firstAttribute="trailing" secondItem="Rgh-rL-YaB" secondAttribute="trailingMargin" id="BQX-uu-Dab"/>
+                    <constraint firstAttribute="centerY" secondItem="qwb-zI-JEj" secondAttribute="centerY" id="G3q-HV-Vwa"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="hNZ-B5-8xO" secondAttribute="bottom" id="JCU-Ze-Jvn"/>
+                    <constraint firstItem="qwb-zI-JEj" firstAttribute="leading" secondItem="hNZ-B5-8xO" secondAttribute="trailing" constant="8" id="JJK-HN-sAC"/>
+                    <constraint firstAttribute="centerY" secondItem="eEX-1V-yim" secondAttribute="centerY" id="Kzc-gE-TBi"/>
+                    <constraint firstItem="eEX-1V-yim" firstAttribute="leading" secondItem="Rgh-rL-YaB" secondAttribute="leadingMargin" id="Y6Y-ya-dBm"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="nameLabel" destination="XET-Wn-aMN" id="bRB-Xe-Xfd"/>
