--- a/ch19-Subclassing_UITableViewCell/Homepwner/Homepwner/BNRItemCell.xib
+++ b/ch19-Subclassing_UITableViewCell/Homepwner/Homepwner/BNRItemCell.xib
@@ -44,6 +44,15 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlM-3a-GxF">
+                        <rect key="frame" x="8" y="10" width="40" height="40"/>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="showImage:" destination="bET-3u-BU5" eventType="touchUpInside" id="cCt-9a-FKr"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="hNZ-B5-8xO" firstAttribute="leading" secondItem="eEX-1V-yim" secondAttribute="trailing" constant="8" id="0pr-Cu-7qn"/>
@@ -56,7 +65,11 @@
                     <constraint firstAttribute="bottomMargin" secondItem="hNZ-B5-8xO" secondAttribute="bottom" id="JCU-Ze-Jvn"/>
                     <constraint firstItem="qwb-zI-JEj" firstAttribute="leading" secondItem="hNZ-B5-8xO" secondAttribute="trailing" constant="8" id="JJK-HN-sAC"/>
                     <constraint firstAttribute="centerY" secondItem="eEX-1V-yim" secondAttribute="centerY" id="Kzc-gE-TBi"/>
+                    <constraint firstItem="dlM-3a-GxF" firstAttribute="top" secondItem="eEX-1V-yim" secondAttribute="top" id="UBq-8P-KxI"/>
                     <constraint firstItem="eEX-1V-yim" firstAttribute="leading" secondItem="Rgh-rL-YaB" secondAttribute="leadingMargin" id="Y6Y-ya-dBm"/>
+                    <constraint firstItem="dlM-3a-GxF" firstAttribute="leading" secondItem="eEX-1V-yim" secondAttribute="leading" id="d5Z-PH-Z53"/>
+                    <constraint firstItem="dlM-3a-GxF" firstAttribute="trailing" secondItem="eEX-1V-yim" secondAttribute="trailing" id="wfQ-bX-dHP"/>
+                    <constraint firstItem="dlM-3a-GxF" firstAttribute="bottom" secondItem="eEX-1V-yim" secondAttribute="bottom" id="xUe-S3-mz9"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
