--- a/ch20-Dynamic_Type/Homepwner/Homepwner/BNRDetailViewController.xib
+++ b/ch20-Dynamic_Type/Homepwner/Homepwner/BNRDetailViewController.xib
@@ -9,9 +9,12 @@
                 <outlet property="cameraButton" destination="PP4-3D-LHX" id="eLH-mO-HEq"/>
                 <outlet property="dateLabel" destination="u7O-94-OGk" id="oyB-d6-p8n"/>
                 <outlet property="nameField" destination="4BT-dT-NHN" id="cJu-xP-dRh"/>
+                <outlet property="nameLabel" destination="wb6-X0-lwC" id="xT2-A7-FeY"/>
                 <outlet property="serialNumberField" destination="UXP-xj-6sX" id="5el-Fp-sot"/>
+                <outlet property="serialNumberLabel" destination="ozy-NG-8aL" id="9gt-QQ-dWr"/>
                 <outlet property="toolbar" destination="sby-JT-M5K" id="Tz1-HI-iUe"/>
                 <outlet property="valueField" destination="YRv-Cz-etR" id="TJz-ze-xP0"/>
+                <outlet property="valueLabel" destination="yvm-ql-rc2" id="kyi-tK-ZQd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
