--- a/ch20-Dynamic_Type/Homepwner/Homepwner/BNRDetailViewController.xib
+++ b/ch20-Dynamic_Type/Homepwner/Homepwner/BNRDetailViewController.xib
@@ -24,37 +24,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wb6-X0-lwC">
-                    <rect key="frame" x="20" y="85" width="54" height="20.5"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="ax5-M9-Pcg"/>
-                        <constraint firstAttribute="width" constant="54" id="gz1-cK-sLJ"/>
-                    </constraints>
+                    <rect key="frame" x="20" y="85" width="45.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Serial" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozy-NG-8aL">
                     <rect key="frame" x="20" y="120" width="45.5" height="20.5"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20.5" id="IhM-Vt-mxi"/>
-                        <constraint firstAttribute="width" constant="45.5" id="xwa-3O-7fk"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvm-ql-rc2">
                     <rect key="frame" x="20" y="165" width="45.5" height="20.5"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="45.5" id="hFn-WJ-SMz"/>
-                        <constraint firstAttribute="height" constant="20.5" id="vYF-Vy-xwD"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4BT-dT-NHN">
-                    <rect key="frame" x="100" y="80" width="492" height="30"/>
+                    <rect key="frame" x="91.5" y="80" width="500.5" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
@@ -62,7 +50,7 @@
                     </connections>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UXP-xj-6sX">
-                    <rect key="frame" x="100" y="116" width="492" height="30"/>
+                    <rect key="frame" x="91.5" y="116" width="500.5" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
@@ -70,7 +58,7 @@
                     </connections>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YRv-Cz-etR">
-                    <rect key="frame" x="100" y="161" width="492" height="30"/>
+                    <rect key="frame" x="91.5" y="161" width="500.5" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                     <connections>
@@ -79,9 +67,6 @@
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7O-94-OGk">
                     <rect key="frame" x="0.0" y="210" width="600" height="20.5"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20.5" id="wcG-CR-uTa"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -102,7 +87,7 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="UXP-xj-6sX" firstAttribute="leading" secondItem="ozy-NG-8aL" secondAttribute="trailing" constant="34.5" id="4BZ-BX-5Kb"/>
+                <constraint firstItem="UXP-xj-6sX" firstAttribute="leading" secondItem="ozy-NG-8aL" secondAttribute="trailing" constant="26" id="4BZ-BX-5Kb"/>
                 <constraint firstAttribute="trailing" secondItem="u7O-94-OGk" secondAttribute="trailing" id="E0B-Vr-hYI"/>
                 <constraint firstAttribute="trailing" secondItem="sby-JT-M5K" secondAttribute="trailing" id="GdK-0l-GMs"/>
                 <constraint firstItem="sby-JT-M5K" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Gis-m8-akG"/>
@@ -116,8 +101,10 @@
                 <constraint firstItem="ozy-NG-8aL" firstAttribute="top" secondItem="wb6-X0-lwC" secondAttribute="bottom" constant="14.5" id="UhF-EM-K79"/>
                 <constraint firstItem="u7O-94-OGk" firstAttribute="top" secondItem="YRv-Cz-etR" secondAttribute="bottom" constant="18.5" id="Z0i-6F-d8N"/>
                 <constraint firstItem="4BT-dT-NHN" firstAttribute="leading" secondItem="wb6-X0-lwC" secondAttribute="trailing" constant="26" id="eEk-Nv-FY7"/>
+                <constraint firstItem="wb6-X0-lwC" firstAttribute="width" secondItem="ozy-NG-8aL" secondAttribute="width" id="eXY-jy-pwM"/>
                 <constraint firstItem="wb6-X0-lwC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="85" id="hbx-67-6Pf"/>
-                <constraint firstItem="YRv-Cz-etR" firstAttribute="leading" secondItem="yvm-ql-rc2" secondAttribute="trailing" constant="34.5" id="i8G-Mv-Sot"/>
+                <constraint firstItem="YRv-Cz-etR" firstAttribute="leading" secondItem="yvm-ql-rc2" secondAttribute="trailing" constant="26" id="i8G-Mv-Sot"/>
+                <constraint firstItem="wb6-X0-lwC" firstAttribute="width" secondItem="yvm-ql-rc2" secondAttribute="width" id="k7X-FJ-H3b"/>
                 <constraint firstItem="4BT-dT-NHN" firstAttribute="baseline" secondItem="wb6-X0-lwC" secondAttribute="baseline" constant="-1.5" id="pV7-Jl-Brh"/>
                 <constraint firstItem="wb6-X0-lwC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="pjM-PU-DlZ"/>
                 <constraint firstItem="ozy-NG-8aL" firstAttribute="leading" secondItem="yvm-ql-rc2" secondAttribute="leading" id="r4j-E1-Lyb"/>
